@@ -1,12 +1,12 @@
 package com.service.dgs.shopping.security;
 
-import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.charset.StandardCharsets;
 import java.security.KeyFactory;
 import java.security.PublicKey;
 import java.security.spec.X509EncodedKeySpec;
 import java.util.Base64;
 
+import org.springframework.core.io.ClassPathResource;
 import org.springframework.stereotype.Component;
 import io.jsonwebtoken.*;
 
@@ -20,9 +20,10 @@ public class JwtUtil {
 
 	public JwtUtil() {
 		try {
-			String key = new String(Files.readAllBytes(Paths.get("src/main/resources/public.key")))
-					.replace("-----BEGIN PUBLIC KEY-----", "").replace("-----END PUBLIC KEY-----", "")
-					.replaceAll("\\s+", "");
+			// In production, src/main/resources is inside your JAR, not a file path.
+			String key = new String(new ClassPathResource("public.key").getInputStream().readAllBytes(),
+					StandardCharsets.UTF_8).replace("-----BEGIN PUBLIC KEY-----", "")
+					.replace("-----END PUBLIC KEY-----", "").replaceAll("\\s+", "");
 			byte[] decoded = Base64.getDecoder().decode(key);
 			X509EncodedKeySpec keySpec = new X509EncodedKeySpec(decoded);
 			KeyFactory keyFactory = KeyFactory.getInstance("RSA");
